--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,28 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "plugins": [
+    "eslint-plugin-react"
+  ],
+  "rules": {
+    "react/prop-types": 0,
+    "no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": false
+      }
+    ],
+    "react/jsx-curly-spacing": [
+      2,
+      {
+        "when": "always",
+        "allowMultiline": false
+      }
+    ],
+    "quotes": [2, "single"],
+    "indent": [2, 2, { "SwitchCase": 1 }],
+    "semi": [2, "always"],
+    "curly": [2, "all"]
+  }
 }
