--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "axios": "^0.27.2",
     "eslint-plugin-react": "^7.29.4",
+    "moment": "^2.29.3",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-query": "^3.38.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
